<resources>
    <string name="app_name">PetagramaSemana4</string>
    <string name="nombre_cardview">Thor</string>
    <string name="cant_likes">5</string>
    <string name="titulo_petagram">Petagram</string>

    <string name="menu_contacto">Contacto</string>
    <string name="menu_acerca_de">Acerca de</string>

    <string name="et_nombre">Nombre</string>
    <string name="et_email">Email</string>
    <string name="et_mensaje">Mensaje</string>
    <string name="btn_enviar">Enviar Mensaje</string>

    <string name="linea_1">Petagrama</string>
    <string name="linea_2">M. Curbelo</string>
    <string name="linea_3">correo@gmail.com</string>

    <string name="nombre_fp">Nombre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>